Fix: Added dummy build script for Azure

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
+    "build": "echo 'No build step required'",
     "test": "echo \"No tests specified\" && exit 0"
   },
   "engines": {
